Job Delete change completed and New changes done

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -90,7 +90,7 @@
     "email": "Email",
     "jobDetails": "Jobdetails",
     "sendMail": "Mail senden",
-    "postJobDetailView": "Detailansicht nach Auftrag veröffentlichen",
+    "postJobDetailView": "Jobdetails veröffentlichen",
     "edit": "Bearbeiten",
     "description": "Beschreibung",
     "yourPostJobs": "Ihre Post Jobs",
