--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -90,7 +90,7 @@
     "email": "Email",
     "jobDetails": "Job Details",
     "sendMail": "Send Mail",
-    "postJobDetailView": "Post Job Detail View",
+    "postJobDetailView": "Post Job Details",
     "edit": "Edit",
     "description": "Description",
     "yourPostJobs": "Your Post Jobs",
