--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -90,7 +90,7 @@
     "email": "Correo electrónico",
     "jobDetails": "Detalles del trabajo",
     "sendMail": "Enviar correo",
-    "postJobDetailView": "Publicar vista detallada del trabajo",
+    "postJobDetailView": "Publicar detalles del trabajo",
     "edit": "Editar",
     "description": "Descripción",
     "yourPostJobs": "Tus trabajos publicados",
