--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -35,6 +35,7 @@
     "requirementCriteria": "Anforderungskriterien",
     "jobTitle": "Berufsbezeichnung",
     "jobType": "Auftragstyp",
+    "contractDuration": "Vertragslaufzeit",
     "pay": "Zahlen",
     "country": "Land",
     "location": "Ort",
