--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -35,6 +35,7 @@
     "requirementCriteria": "Criterios de requisitos",
     "jobTitle": "Título profesional",
     "jobType": "El tipo de trabajo",
+    "contractDuration": "Duración del contrato",
     "pay": "Pagar",
     "country": "País",
     "location": "Ubicación",
