Changes: Home page loader, Pay salary and hands on exp field

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -64,7 +64,8 @@
     "travelRequired": "Reise erforderlich",
     "enterNumberOfPositions": "Geben Sie die Anzahl der Positionen ein",
     "availableIn": "Disponible en",
-    "skills": "Kompetenzen"
+    "skills": "Kompetenzen",
+    "salary": "Gehalt"
   },
   "dashboard": {
     "dashboard": "Instrumententafel",
