Profile View completed

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -63,7 +63,7 @@
     "willingToRelocate": "Umzugsbereitschaft",
     "travelRequired": "Reise erforderlich",
     "enterNumberOfPositions": "Geben Sie die Anzahl der Positionen ein",
-    "availableIn": "Disponible en",
+    "availableIn": "Verfügbar in",
     "skills": "Kompetenzen",
     "salary": "Gehalt"
   },
