--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -63,7 +63,7 @@
     "willingToRelocate": "Willing to Relocate",
     "travelRequired": "Travel Required",
     "enterNumberOfPositions": "Enter Number of Positions",
-    "availableIn": "Verfügbar in",
+    "availableIn": "Available In",
     "skills": "Skills",
     "salary": "Salary"
   },
