Candidate profile completed for employer

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -143,6 +143,7 @@
     "currentRole": "Momentane Rolle",
     "DomainsWorked": "Domänen funktionierten",
     "clientsWorkedWith": "Kunden arbeiteten mit",
+    "previousEmployers": "Frühere Arbeitgeber",
     "handsOnExperience": "Praxiserfahrung",
     "others": "Andere",
     "rolesLookingFor": "Rollen auf der Suche nach",
