--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -143,6 +143,7 @@
     "currentRole": "Current Role",
     "DomainsWorked": "Domains Worked",
     "clientsWorkedWith": "Clients worked with",
+    "previousEmployers": "Previous Employers",
     "handsOnExperience": "Hands on Experience",
     "others": "Others",
     "rolesLookingFor": "Roles Looking for",
