--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -143,6 +143,7 @@
     "currentRole": "Rol actual",
     "DomainsWorked": "Dominios Trabajados",
     "clientsWorkedWith": "Clientes trabajadas con",
+    "previousEmployers": "Empleadores Anteriores",
     "handsOnExperience": "Experiencia práctica",
     "others": "Otras",
     "rolesLookingFor": "Buscando roles",
