--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -106,7 +106,7 @@
     "profile": "Profil",
     "visaSponsored": "Visa gesponsert",
     "applied": "angewendet",
-    "iWillChooseWhileApplying": "Ich werde bei der Bewerbung wählen",
+    "iWillChooseWhileApplying": "Ich werde den Lebenslauf bei der Bewerbung auswählen",
     "startDate": "Anfangsdatum",
     "viewAll": "Alle ansehen",
     "candidateViewJobs": "Kandidaten Jobs anzeigen"
