--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -106,7 +106,7 @@
     "profile": "Profile",
     "visaSponsored": "Visa Sponsored",
     "applied": "applied",
-    "iWillChooseWhileApplying": "I will choose while applying",
+    "iWillChooseWhileApplying": "I will choose the resume while applying",
     "startDate": "Start Date",
     "viewAll": "View All",
     "candidateViewJobs": "Candidate View Jobs"
