--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -106,7 +106,7 @@
     "profile": "Perfil",
     "visaSponsored": "Patrocinado por Visa",
     "applied": "aplicada",
-    "iWillChooseWhileApplying": "Elegiré al aplicar",
+    "iWillChooseWhileApplying": "Elegiré el currículum mientras solicito",
     "startDate": "Fecha de inicio",
     "viewAll": "Ver todo",
     "candidateViewJobs": "Candidata Ver empleos"
