--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -73,6 +73,7 @@
     "matches": "Streichhölzer",
     "applicants": "Bewerberinnen",
     "shortlisted": "Die engere Wahl",
+    "shortlist": "Auswahlliste",
     "savedProfile": "Gespeichertes Profil",
     "applications": "Anwendungen",
     "employer": "Arbeitgeberin",
