--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -73,6 +73,7 @@
     "matches": "Matches",
     "applicants": "Applicants",
     "shortlisted": "Shortlisted",
+    "shortlist": "Shortlist",
     "savedProfile": "Saved Profile",
     "applications": "Applications",
     "employer": "Employer",
