--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -73,6 +73,7 @@
     "matches": "Partidos",
     "applicants": "Solicitantes",
     "shortlisted": "Preseleccionada",
+    "shortlist": "lista corta",
     "savedProfile": "Perfil guardado",
     "applications": "Aplicaciones",
     "employer": "Empleadora",
