--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -74,6 +74,7 @@
     "applicants": "Bewerberinnen",
     "shortlisted": "Die engere Wahl",
     "shortlist": "Auswahlliste",
+    "aboutUs": "Über uns",
     "savedProfile": "Gespeichertes Profil",
     "applications": "Anwendungen",
     "employer": "Arbeitgeberin",
