--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -74,6 +74,7 @@
     "applicants": "Applicants",
     "shortlisted": "Shortlisted",
     "shortlist": "Shortlist",
+    "aboutUs": "About Us",
     "savedProfile": "Saved Profile",
     "applications": "Applications",
     "employer": "Employer",
