--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -74,6 +74,7 @@
     "applicants": "Solicitantes",
     "shortlisted": "Preseleccionada",
     "shortlist": "lista corta",
+    "aboutUs": "Sobre nosotras",
     "savedProfile": "Perfil guardado",
     "applications": "Aplicaciones",
     "employer": "Empleadora",
