User filter completed

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -74,6 +74,8 @@
     "applicants": "Bewerberinnen",
     "shortlisted": "Die engere Wahl",
     "shortlist": "Auswahlliste",
+    "jobsApplied": "Jobs beworben",
+    "myResumes": "Meine Lebensläufe",
     "aboutUs": "Über uns",
     "savedProfile": "Gespeichertes Profil",
     "applications": "Anwendungen",
