--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -87,6 +87,8 @@
     "sortBy": "Sort by",
     "filter": "Filter",
     "resume": "Resume",
+    "jobsApplied": "Jobs Applied",
+    "myResumes": "My Resumes",
     "mail": "Mail",
     "candidateName": "Candidate Name",
     "position": "Position",
