--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -74,6 +74,8 @@
     "applicants": "Solicitantes",
     "shortlisted": "Preseleccionada",
     "shortlist": "lista corta",
+    "jobsApplied": "Trabajos aplicados",
+    "myResumes": "Mis CV",
     "aboutUs": "Sobre nosotras",
     "savedProfile": "Perfil guardado",
     "applications": "Aplicaciones",
