The angular update 10-0.1 to 12.0.0

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -94,7 +94,7 @@
     "filter": "Filter",
     "resume": "Resume",
     "jobsApplied": "Jobs Applied",
-    "myResumes": "ATTACHMENT",
+    "myResumes": "MY ATTACHMENTS",
     "mail": "Mail",
     "candidateName": "Candidate Name",
     "position": "Position",
