--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -33,11 +33,37 @@
     "addNotes": "Add Notes"
   },
   "postJob": {
+	"education":"Education",
+    "languageknown": "Languages Known",
+    "perksBenfits": "Perks & Benefits",
+    "healthWellness": "Health & Wellness",
+    "dentalInsurance": "Dental Insurance",
+    "visionInsurance": "Vision Insurance",
+    "healthInsurance": "Health Insurance",
+    "lifeInsurance": "Life Insurance",
+    "paidTimeOff": "Paid Time Off",
+    "vacationPolicy": "PTO / Vacation Policy",
+    "paidHolidays": "Paid Holidays",
+    "maternity": "Maternity / Paternity Leave",
+    "financialBenefits": "Financial Benefits",
+    "retirementPlan": "401K / Retirement Plan",
+    "performanceBonus": "Performance Bonus",
+    "tuitionReimbursement": "Tuition Reimbursement",
+    "purchasePlan": "Employee Stock Purchase Plan",
+    "freeFood": "Free Food",
+    "homePolicy": "Work From Home Policy",
+    "petFriendly": "Pet-Friendly",
+    "socialOutings": "Company Social Outings",
+    "officeSpace": "Unique Office Space",
     "postYourJob": "Post your Job",
+    "durationPlaceholder": "Ex: 6 months",
+    "duration": "Duration",
+    "months": "in months",
     "jobInformation": "Job Information",
     "requirementCriteria": "Requirement Criteria",
     "jobTitle": "Job Title",
     "jobType": "Job Type",
+    "jobRole": "Job Role", 
     "contractDuration": "Contract Duration",
     "pay": "Pay",
     "country": "Country",
@@ -75,6 +101,8 @@
   },
   "dashboard": {
     "dashboard": "Dashboard",
+    "programmingSkills": "Programming Skills",
+    "otherSkills": "Other Skills",
     "postedJobs": "Posted Jobs",
     "matches": "Matches",
     "applicants": "Applicants",
