--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -33,8 +33,16 @@
     "addNotes": "Add Notes"
   },
   "postJob": {
+	"extraCriteria":"Extra Criteria",
 	"education":"Education",
+	"workAuthorisation":"Work Authorisation",
+	"desiredSkills":"DESIRED SKILLS",
     "languageknown": "Languages Known",
+    "shouldBeACitizenPrWork": "Should be a Citizen / PR / Authorized to Work",
+    "clientFacing": "Client Facing Role",
+    "trainingExperience": "Training Experience",
+    "required": "Required",
+    "notRequired": "Not Required",
     "perksBenfits": "Perks & Benefits",
     "healthWellness": "Health & Wellness",
     "dentalInsurance": "Dental Insurance",
@@ -101,6 +109,8 @@
   },
   "dashboard": {
     "dashboard": "Dashboard",
+    "otherPreferences": "OTHER PREFERENCES",
+	"desiredSkills":"DESIRED SKILLS",
     "programmingSkills": "Programming Skills",
     "otherSkills": "Other Skills",
     "postedJobs": "Posted Jobs",
