Profile Issue Fixing and the Job POST View Changes

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -43,8 +43,8 @@
     "trainingExperience": "Training Experience",
     "required": "Required",
     "notRequired": "Not Required",
-    "perksBenfits": "Perks & Benefits",
-    "healthWellness": "Health & Wellness",
+    "perksBenfits": " Benefits",
+    "healthWellness": "Health ",
     "dentalInsurance": "Dental Insurance",
     "visionInsurance": "Vision Insurance",
     "healthInsurance": "Health Insurance",
@@ -54,7 +54,7 @@
     "paidHolidays": "Paid Holidays",
     "maternity": "Maternity / Paternity Leave",
     "financialBenefits": "Financial Benefits",
-    "retirementPlan": "401K / Retirement Plan",
+    "retirementPlan": "Retirement Plan",
     "performanceBonus": "Performance Bonus",
     "tuitionReimbursement": "Tuition Reimbursement",
     "purchasePlan": "Employee Stock Purchase Plan",
