Job-Post Preview popup view changes and the post-job view changes

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -105,7 +105,7 @@
     "skills": "Skills",
 	"experienceAndSkills":"EXPERIENCE AND SKILLS ",
 	"visaSponsered":"Show me visa sponsered jobs",
-    "salary": "Salary"
+    "salary": "Pay"
   },
   "dashboard": {
     "dashboard": "Dashboard",
