Post job Preview popup optional fields adding and job-seeker profile optional fields adding

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -33,6 +33,9 @@
     "addNotes": "Add Notes"
   },
   "postJob": {
+    "relocate": "Relocation",
+    "authorizedToWork": "Authorized To Work",
+	"extraCriteria":"Extra Criteria",
 	"extraCriteria":"Extra Criteria",
 	"education":"Education",
 	"workAuthorisation":"Work Authorisation",
@@ -104,7 +107,7 @@
     "availableIn": "Available In",
     "skills": "Skills",
 	"experienceAndSkills":"EXPERIENCE AND SKILLS ",
-	"visaSponsered":"Show me visa sponsered jobs",
+	"visaSponsered":"Show me visa Sponsored jobs",
     "salary": "Pay"
   },
   "dashboard": {
@@ -175,6 +178,7 @@
   },
   "postYourResume": {
     "candidateRegistration": "Candidate Registration",
+    "authorizedToWork": "Authorized To Work",
     "personalDetails": "Personal Details",
     "educationExperience": "Education & Experience",
     "skillsets": "Skillsets",
@@ -195,6 +199,7 @@
     "enterPortfolioUrl": "Enter portfolio url",
     "show": "Show",
     "uploadPhoto": "Upload Photo",
+    "uploadPhotoCompany": "Edit/Change Logo",
     "dragAndDrop": "Drag and Drop",
     "education": "Education",
     "degree": "Degree",
