--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -210,6 +210,7 @@
     "degree": "Degree",
     "fieldOfStudy": "Field of Study",
     "yearOfCompletion": "Year of completion",
+    "yearOfCompletionGraduation": "Year of Graduation",
     "experience": "Experience",
     "currentEmployer": "Current Employer",
     "currentRole": "Current Role",
